<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LoginRegister</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="title_activity_workshop10">WorkshopActivity10</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="time">time</string>
    <string name="open_time_picker">open time picker</string>
    <string name="verify_e_mail">Verify E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
</resources>
